Adding initial works about Structural concurrency & Gatherers