@@ -16,6 +16,14 @@
 		</developer>
 	</developers>
 
+	<licenses>
+		<license>
+			<name>Apache-2.0</name>
+			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
 	<modules>
 		<module>problems</module>
 		<module>training</module>
@@ -25,6 +33,7 @@
 	<properties>
 		<java.version>22</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
 		<slf4j.version>2.1.0-alpha1</slf4j.version>
 		<logback.version>1.5.6</logback.version>
@@ -139,6 +148,9 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.13.0</version>
 					<configuration>
+						<compilerArgs>
+							<arg>--enable-preview</arg>
+						</compilerArgs>
 						<compilerArgument>-Xlint:all</compilerArgument><!-- -Werror -->
 						<release>${java.version}</release>
 					  </configuration>
@@ -147,6 +159,9 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>3.2.5</version>
+					<configuration>
+						<argLine>--enable-preview</argLine>
+					</configuration>
 				</plugin>
 				<plugin>
 					<artifactId>maven-clean-plugin</artifactId>
@@ -181,13 +196,21 @@
                                     <version>3.6.3</version>
                                 </requireMavenVersion>
                                 <requireJavaVersion>
-                                    <version>17</version>
+                                    <version>22</version>
                                 </requireJavaVersion>
                                 <bannedDependencies>
                                     <excludes>
                                         <exclude>org.projectlombok:lombok</exclude>
                                     </excludes>
                                 </bannedDependencies>
+								<!--
+								<requirePluginVersions>
+									<banLatest>true</banLatest>
+									<banRelease>true</banRelease>
+									<banSnapshots>true</banSnapshots>
+									<phases>clean,deploy,site</phases>
+								 </requirePluginVersions>
+								 -->
                             </rules>
                             <fail>true</fail>
                         </configuration>
